# sense_bridge

./: README.md  package.xml  pytest.ini  setup.cfg  setup.py
.github/workflows/: python_tests.yml
eeg_bridge/: bridge.py
eeg_bridge/test/: conftest.py  ros2_mock.py  test_eeg_bridge.py
sense_bridge/: bridge.py
sense_bridge/test/: conftest.py  ros2_mock.py  test_eeg_bridge.py
