<?xml version="1.0"?>
<package format="3">
  <name>eeg_bridge</name>
  <version>0.0.0</version>
  <description>EEG Bridge</description>
  <maintainer email="a.al-hindawi@ucl.ac.uk">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>sense_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>